object version select field no longer overlaps headline

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -488,7 +488,7 @@ span.folder_name_no_content{
 }
 
 div.object_version_select{
-    margin-top: -2ex;
+    /*margin-top: -2ex;*/
 }
 
 img.folder_info{
